# pop-cosmos

./: LICENSE  README.md  pyproject.toml
demo/: catalogue_generation.ipynb  mock_catalogue_tutorial.ipynb
docs/: catalogue.md  constants.md  emlines.md  utils.md
pop_cosmos/: catalogue.py  constants.py  emlines.py  utils.py
trained_models/: noiseModelPublic.pt
trained_models/emline_speculator_models/: PCABasis.npz  elams.npy  speculator-emlinesabsmags
trained_models/photulator_models/: model_4x128_alsing20_NB711.SuprimeCam_cpu.pt  model_4x128_alsing20_NB711.SuprimeCam_gpu.pt  model_4x128_alsing20_NB816.SuprimeCam_cpu.pt  model_4x128_alsing20_NB816.SuprimeCam_gpu.pt  model_4x128_alsing20_hsc_g_cpu.pt  model_4x128_alsing20_hsc_g_gpu.pt  model_4x128_alsing20_hsc_i_cpu.pt  model_4x128_alsing20_hsc_i_gpu.pt  model_4x128_alsing20_hsc_r_cpu.pt  model_4x128_alsing20_hsc_r_gpu.pt  model_4x128_alsing20_hsc_y_cpu.pt  model_4x128_alsing20_hsc_y_gpu.pt  model_4x128_alsing20_hsc_z_cpu.pt  model_4x128_alsing20_hsc_z_gpu.pt  model_4x128_alsing20_ia427_cosmos_cpu.pt  model_4x128_alsing20_ia427_cosmos_gpu.pt  model_4x128_alsing20_ia464_cosmos_cpu.pt  model_4x128_alsing20_ia464_cosmos_gpu.pt  model_4x128_alsing20_ia484_cosmos_cpu.pt  model_4x128_alsing20_ia484_cosmos_gpu.pt  model_4x128_alsing20_ia505_cosmos_cpu.pt  model_4x128_alsing20_ia505_cosmos_gpu.pt  model_4x128_alsing20_ia527_cosmos_cpu.pt  model_4x128_alsing20_ia527_cosmos_gpu.pt  model_4x128_alsing20_ia574_cosmos_cpu.pt  model_4x128_alsing20_ia574_cosmos_gpu.pt  model_4x128_alsing20_ia624_cosmos_cpu.pt  model_4x128_alsing20_ia624_cosmos_gpu.pt  model_4x128_alsing20_ia679_cosmos_cpu.pt  model_4x128_alsing20_ia679_cosmos_gpu.pt  model_4x128_alsing20_ia709_cosmos_cpu.pt  model_4x128_alsing20_ia709_cosmos_gpu.pt  model_4x128_alsing20_ia738_cosmos_cpu.pt  model_4x128_alsing20_ia738_cosmos_gpu.pt  (+18 more)
