[project]
name = "pop-cosmos"
version = "0.1.0"
description = "Generative model characterizing the galaxy population, calibrated to z>=4 from the Cosmic Evolution Survey (COSMOS)"
authors = [
    {name = "Stephen Thorp, Hiranya Peiris, Gurjeet Jagwani, Sinan Deger, Justin Alsing, Boris Leistedt, Daniel Mortlock, Anik Halder, Joel Leja"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (==2.7.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "speculator @ git+https://github.com/justinalsing/speculator.git@torch",
    "flowfusion @ git+https://github.com/Cosmo-Pop/flowfusion.git",
    "matplotlib (==3.9.2)",
    "scipy (==1.14.1)",
    "torchdiffeq (==0.2.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
